--- a/pages/mall/newest/newest.wxss
+++ b/pages/mall/newest/newest.wxss
@@ -11,10 +11,10 @@
 .lw-pop>view:first-child view text{font-size:24rpx;color:#999;float:none}
 .fw-cont>view{width:365rpx;position:relative;margin-top:40rpx;overflow: hidden}
 .fw-c-img{width:365rpx;height:365rpx;text-align:center}
-.fw-c-img image{max-width:365rpx;max-height:365rpx}
+.fw-c-img image{width:365rpx;height:365rpx;max-width:365rpx;max-height:365rpx;}
 .fw-cont{color:#333}
 .fw-cont>view view:nth-child(2),.fw-cont>view view:nth-child(3),.fw-cont>view view:nth-child(4){text-align:left;text-overflow:-o-ellipsis-lastline;overflow:hidden;text-overflow:ellipsis;display:-webkit-box;-webkit-line-clamp:2;line-clamp:2;-webkit-box-orient:vertical}
-.fw-cont>view:nth-child(even){float: right}
+.fw-cont>view:nth-child(even){margin-left: 20rpx}
 .fw-cont>view .new_left{text-align:left;color:#999}
 .imgAll{overflow-y:scroll;white-space:nowrap;margin-top:30rpx;padding-right:30rpx;padding-left:25rpx}
 .imgAll view{display:inline-block;margin-left:15px}
@@ -24,8 +24,8 @@
 .lw-pop1 .pop-n1{margin-bottom:0rpx}
 .navigator-hover{opacity:1}
 .v-height{color:#fff}
-.f-class{background:#fff;margin-bottom:20rpx;padding-bottom:60rpx;height: 370rpx}
-.f-class>view,.f-class>navigator{width:20%;float: left;text-align:center;font-size:24rpx;color:#333;font-weight:bold;padding-top:30rpx;height:165rpx;position:relative;display: flex;align-items: center;justify-content: space-around;flex-direction: column;}
+.f-class{background:#fff;margin-bottom:20rpx;padding-bottom:60rpx;height: 400rpx;}
+.f-class>view,.f-class>navigator{width:20%;float: left;text-align:center;font-size:24rpx;color:#333;font-weight:bold;padding-top:25rpx;height:165rpx;position:relative;display: flex;align-items: center;justify-content: space-around;flex-direction: column;}
 .f-class>navigator view{position: absolute;bottom: -20rpx;text-align: center;width: 100%}
 .f-class>view image,.f-class>navigator image{width:100rpx}
 .f-class>navigator:last-child image{width: 50rpx;height: 50rpx;margin-top:27rpx;margin-bottom:26rpx;}
@@ -33,8 +33,8 @@
 .n-tj-1 view:nth-child(2){font-size:22rpx;margin-bottom:50rpx}
 .n-tj-button{display:inline-block;width:150rpx;height:40rpx;background:#CCAA77;line-height:40rpx;color:#fff;padding:0;font-size:24rpx;border-radius:0;vertical-align:middle;margin:0 20rpx}
 .n-tj-1>view>view{display:inline-block;width:130rpx;height:4rpx;border-top:4rpx solid #9A9B9C;padding-bottom:2rpx}
-.n-tj-goods>view>view{width:33.3%;display:inline-block;font-size:24rpx;color:#999;padding-bottom:60rpx;background:#fff;margin-bottom:40rpx;position: relative;text-align: center}
-.n-tj-goods{background: #fff;}
+.n-tj-goods>view>view{width:33.3%;display:inline-block;font-size:24rpx;color:#999;background:#fff;margin-bottom:40rpx;position: relative;text-align: center}
+.n-tj-goods{background: #fff;margin-bottom: 20rpx}
 .n-tj-goods>view{padding:30rpx;padding-bottom: 0}
 .n-tj view{position: relative;z-index: 100}
 .n-tj view.n-down{width:0;height:0;border-bottom:20rpx solid #fff;border-left:16rpx solid transparent;border-right:16rpx solid transparent;position:absolute;bottom:10rpx;left:50%;margin-left:-10rpx}
@@ -46,9 +46,10 @@
 .ys-font text{color:#AD2325;font-size:28rpx}
 .ys-font-l{text-align:left}
 .backFd{width: 100%;left: 0;z-index: 99;top: 0}
-.n-lw-pop{padding: 0}
+.n-lw-pop{padding: 0;margin-bottom: 20rpx;padding-bottom:20rpx}
 .n-lw-pop>view:first-child{padding:30rpx;padding-bottom: 0}
 .n-lw-pop>view:nth-child(2){padding:0 30rpx 0;}
 .n-lw-pop .fw-c-img image,.n-lw-pop .fw-c-img{border-radius: 0}
-.n-lw-pop .fw-cont>view>view{margin-left: 0}
+.n-lw-pop .fw-cont>view>view{margin-left: 0;overflow: hidden}
 .n-lw-pop .fw-cont>view>view.ys-font,.n-lw-pop .fw-cont>view>view.ys-font-l{margin: 0 20rpx;}
+.n-lw-pop:last-child{margin-bottom: 50rpx}
